--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,10 @@
         <title>Working To-Do App</title>
     </head>
     <body>
-        <ul> <!-- ultimately we want to have a loop over a list of objects that would then generate this list-->
-            <li>Todo1</li>
-            <li>Todo2</li>
-            <li>Todo3</li>
-            <li>Todo4</li>
+        <ul> <!-- Now we're going to use the Jinja engine to generate <li>-->
+            {% for d in data %}
+            <li>{{d.description}}</li>
+            {% endfor %}
         </ul>
     </body>
 </html>
