--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
         <title>Working To-Do App</title>
     </head>
     <body>
+        <form action="todos/create" method="POST">
+            <input type="text" placeholder="description" name="description" value="description"/>
+            <button type="submit" value="Create">Create</button>
+        </form>
         <ul> <!-- Now we're going to use the Jinja engine to generate <li>-->
             {% for d in data %}
             <li>{{d.description}}</li>
