--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,52 @@
     <head>
         <meta charset="UTF-8">
         <title>Working To-Do App</title>
+        <style>
+            .hidden{
+                display: none;
+            }
+        </style>
     </head>
     <body>
-        <form action="todos/create" method="POST">
-            <input type="text" placeholder="description" name="description" value="description"/>
+        <form id="form">
+            <input type="text" placeholder="description" name="description" id="description"/>
             <button type="submit" value="Create">Create</button>
         </form>
-        <ul> <!-- Now we're going to use the Jinja engine to generate <li>-->
+        <div id="error" class="hidden">Something went wrong!</div>
+        <ul id="todos"> <!-- Now we're going to use the Jinja engine to generate <li>-->
             {% for d in data %}
             <li>{{d.description}}</li>
             {% endfor %}
         </ul>
+        <script>
+            document.getElementById('form').onsubmit = function(e){
+                e.preventDefault();
+                fetch('/todos/create',{
+                    method: 'POST',
+                    body: JSON.stringify({
+                        'description': document.getElementById('description').value
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })// end fetch(route, JSON-object)
+            }// end function(e) scope
+
+            //fetch() is a promise-based library meaning that when it executes, it
+            // creates a promise that something will be done later with the returned value
+            .then(function(response){
+                return response.json();
+            })
+            .then(function(jsonResponse){
+                console.log(jsonResponse);
+                const liItem = document.createElement('LI');
+                liItem.innerHTML = jsonResponse['description'];
+                document.getElementById('todos').appendChild(liItem);
+                document.getElementById('error').className = 'hidden'
+            })
+            .catch(function(){
+                document.getElementById('error').className = '';
+            })
+        </script>
     </body>
 </html>
