--- a/clean_template/templates/index.html
+++ b/clean_template/templates/index.html
@@ -27,7 +27,7 @@
         fetch('/todos/create', {
           method: 'POST',
           body: JSON.stringify({
-            'description': desc,
+            'description': desc
           }),
           headers: {
             'Content-Type': 'application/json',
