--- a/templates/index.html
+++ b/templates/index.html
@@ -25,30 +25,31 @@
             document.getElementById('form').onsubmit = function(e){  // Execute string operations on create
                 e.preventDefault();
                 const desc = descInput.value; // Make copy of description input; prevent malformed data
-                fetch('/todos/create',{
+                fetch('/todos/create', {
                     method: 'POST',
                     body: JSON.stringify({
-                        'description': document.getElementById('description').value
+                        'description': desc
                     }),
                     headers: {
                         'Content-Type': 'application/json'
                     }
                 })// end fetch(route, JSON-object)
-            }// end function(e) scope
+            
 
             //fetch() is a promise-based library meaning that when it executes, it
             // creates a promise that something will be done later with the returned value
-            .then(response => response.json()) // the response will return a value of jsonresponse
-            .then(jsonResponse => {
-                console.log('response', jsonResponse);  // print json response to log
-                liItem = document.createElement('li');
-                liItem.innerText = desc;                // Set the text = entered from the 'form'
-                document.getElementById('todos').appendChild(liItem);
-                document.getElementById('error').className = 'hidden' // Error warning stays hidden.
-            })
-            .catch(function(){
-                document.getElementById('error').className = '';      // Error warning is displayed
-            });
+                .then(response => response.json()) // the response will return a value of jsonresponse
+                .then(jsonResponse => {
+                    console.log('response', jsonResponse);  // print json response to log
+                    liItem = document.createElement('li');
+                    liItem.innerText = desc;                // Set the text = entered from the 'form'
+                    document.getElementById('todos').appendChild(liItem);
+                    document.getElementById('error').className = 'hidden' // Error warning stays hidden.
+                })
+                .catch(function(){
+                    document.getElementById('error').className = '';      // Error warning is displayed
+                });
+            } // end function(e) scope
         </script>
     </body>
 </html>
