--- a/clean_template/templates/index.html
+++ b/clean_template/templates/index.html
@@ -2,43 +2,92 @@
   <head>
     <title>Todo App</title>
     <style>
-      #error {
+      .hidden {
         display: none;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 300px;
+      }
+      li {
+        clear: both;
+      }
+      li button {
+        -webkit-appearance: none;
+        border: none;
+        outline: none;
+        color: red;
+        float: right;
+        cursor: pointer;
+        font-size: 20px;
+      }
+      .lists-wrapper, .todos-wrapper {
+        display: inline-block;
+        vertical-align: top;
       }
     </style>
   </head>
   <body>
-    <div id="error" class="hidden">Something went wrong!</div>
-    <form id="form" method="post" action="/todos/create">
-      <input type="text" id="description" name="description" />
-      <input type="submit" value="Create" />
-    </form>
-    <ul id="todos">
-      {% for d in data %}
-      <li>{{ d.description }}</li>
-      {% endfor %}
-    </ul>
+    <div class="todos-wrapper">
+      <form id="form">
+        <input type="text" id="description" name="description" />
+        <input type="submit" value="Create" />
+      </form>
+      <div id="error" class="hidden">Something went wrong!</div>
+      <ul id="todos">
+        {% for todo in todos %}
+        <li>
+          <input class="check-completed" data-id="{{ todo.id }}" type="checkbox" {% if todo.completed %} checked {% endif %} />
+          {{ todo.description }}
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
     <script>
-      const descInput = document.getElementById('description');
+      const checkboxes = document.querySelectorAll('.check-completed');
+      for (let i = 0; i < checkboxes.length; i++) {
+        const checkbox = checkboxes[i];
+        checkbox.onchange = function(e) {
+          const newCompleted = e.target.checked;
+          const todoId = e.target.dataset['id'];
+          fetch('/todos/' + todoId + '/set-completed', {
+            method: 'POST',
+            body: JSON.stringify({
+              'completed': newCompleted
+            }),
+            headers: {
+              'Content-Type': 'application/json'
+            }
+          })
+          .then(function() {
+            document.getElementById('error').className = 'hidden';
+          })
+          .catch(function() {
+            document.getElementById('error').className = '';
+          })
+        }
+      }
       document.getElementById('form').onsubmit = function(e) {
         e.preventDefault();
-        const desc = descInput.value;
-        descInput.value = '';
         fetch('/todos/create', {
           method: 'POST',
           body: JSON.stringify({
-            'description': desc
+            'description': document.getElementById('description').value
           }),
           headers: {
-            'Content-Type': 'application/json',
+            'Content-Type': 'application/json'
           }
         })
-        .then(response => response.json())
-        .then(jsonResponse => {
-          console.log('response', jsonResponse);
-          li = document.createElement('li');
-          li.innerText = desc;
-          document.getElementById('todos').appendChild(li);
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(jsonResponse) {
+          console.log(jsonResponse);
+          const liItem = document.createElement('LI');
+          liItem.innerHTML = jsonResponse['description'];
+          document.getElementById('todos').appendChild(liItem);
           document.getElementById('error').className = 'hidden';
         })
         .catch(function() {
