Changed variable names in index.html for easier _at a glance_ readability and differentiation.

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,10 +80,10 @@
         
         <script>
 
-            const deleteBtns = document.querySelectorAll('.deletion');
-                    for (let i = 0; i < deleteBtns.length; i++) {
-                        const btn = deleteBtns[i];
-                        btn.onclick = function(e) {
+            const deleteBtnsAll = document.querySelectorAll('.deletion');
+                    for (let i = 0; i < deleteBtnsAll.length; i++) {
+                        const oneBtn = deleteBtnsAll[i];
+                        oneBtn.onclick = function(e) {
                             const todoId = e.target.dataset['id'];
                             fetch('/todos/' + todoId, {
                                 method: 'DELETE'
@@ -95,10 +95,10 @@
                         }//onclick-function(e)-end
                     }//end-for
            
-            const checkboxes = document.querySelectorAll('.check-completed');
-                for (let i = 0; i < checkboxes.length; i++) {
-                    const checkbox = checkboxes[i];
-                    checkbox.onchange = function(e) {
+            const checkboxArray = document.querySelectorAll('.check-completed');
+                for (let i = 0; i < checkboxArray.length; i++) {
+                    const checkboxNode = checkboxArray[i];
+                    checkboxNode.onchange = function(e) {
                         const newCompleted = e.target.checked;
                         const todoId = e.target.dataset['id'];
                         fetch('/todos/' + todoId + '/set-completed', {
